# NextQuant

./: .claudeignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.local.json
.claude/agents/: infrastructure.md  nextjs-frontend.md  python-ml.md  rust-engine.md  sync-agents.md  testing.md  trading-agent.md
.github/workflows/: ci.yml  release-please.yml
docs/: NexQuant_Plan_Definitivo_v2.docx  NexQuant_Strategic_Analysis.docx  PROJECT_REVIEW.md
infrastructure/nats/: nats.conf
infrastructure/questdb/: server.conf
nextjs-frontend/: Dockerfile  debug-auth.js  next.config.js  package-lock.json  package.json  tailwind.config.js
nextjs-frontend/prisma/: schema.prisma
nextjs-frontend/src/: middleware.ts
python-ml/: Dockerfile  requirements.txt
python-ml/src/: config.py  main.py  nats_client.py  research_brief.py
python-ml/tests/: test_backtesting.py  test_causal.py  test_ensemble.py  test_features.py  test_model_lifecycle.py  test_regime.py
rust-engine/: Cargo.toml  Dockerfile
rust-engine/src/: config.rs  main.rs
rust-engine/src/events/: publisher.rs
rust-engine/src/market_data/: alpaca_source.rs  anomaly_detector.rs  bitget_source.rs  finnhub_source.rs  hybrid_source.rs  market_hours.rs  mock_source.rs  mod.rs  source.rs  types.rs
rust-engine/src/storage/: questdb.rs
tasks/: todo.md
trading-agent/: Dockerfile  requirements.txt
trading-agent/src/: agent_loop.py  alerter.py  claude_layer.py  config.py  db.py  decision_engine.py  encryption.py  execution_specialist.py  main.py  (+7 more)
(+125 files in other folders)
